# Project-Chimera--The-Agentic-Infrastructure

./: .env.sample  AGENT_INSTRUCTIONS.md  Dockerfile  README.md  architecture_strategy.md  main.py  openclaw_config.yaml.sample  pyproject.toml  telemetry_out.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: .coderabbit.yaml  main.yml
.mcp/: telemetry.yaml
.specify/: INIT_FAILED.txt  README.md  config.yaml
cursor/rules/: CLAUDE.md  rules.md
docs/diagrams/: agent_sequence.mmd  data_flow.mmd  database_erd.mmd  openclaw_integration.mmd  system_components.mmd
integrations/: mcp_telemetry.py  openclaw_api.py  openclaw_integration.py
research/: architecture_strategy.md  tooling_strategy.md
scripts/: telemetry_test_jsonrpc.py  telemetry_test_jsonrpc_with_session.py  telemetry_test_with_headers.py
skills/skill_download_youtube/: README.md
skills/skill_transcribe_audio/: README.md
skills/skill_trend_fetcher/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
